Tide Business Banking - Jobs: Senior Android Engineer - Apply online. Job Application for Senior Android Engineer - Content and Partners team at Glovo. Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters. Job Application for Android Engineer at ACV Auctions. Job Application for Android Engineer at ACV Auctions. allego - Jobs: Senior Android Mobile Engineer - Apply online. Mojo Vision - Sr. Android Software Engineer.     Android Engineer  at Vokal . Quizlet - Android Software Engineer, Team Engagement. Quizlet - Android Software Engineer, Subscriptions. Job Application for Principal Android Engineer at MedMen.     Android Engineer  at Vokal . Joyn GmbH - Android Software Engineer (m/f/d). Job Application for Android Engineer (New Grad) at Robinhood. Job Application for Android Engineer (Intern/Co-op) at Robinhood. Trek Bicycle Karrieren–Android Mobile Software Engineer. Android SDK Engineer - ab180 Inc. - Career Page. Incode Technologies - Senior Android Engineer (Mexico City, Mexico). Tally - Senior Android Engineer. Job Application for Senior Android Engineer  at foodpanda Singapore. Trek Bicycle Careers - Android Mobile Software Engineer. Scribd - Android Engineer. Gloo - Senior Android Engineer. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Front - Android Engineer. Klarna - Senior/Lead Android Engineer. Job Application for Android Engineer  at Envoy. Job Application for Android Engineer at JUUL Labs. Deezer Lead Android Engineer - Core Team | SmartRecruiters. Babylon Health - Senior Android Engineer. Freelancer.com - Jobs: Android Software Engineer - Apply online. Job Application for Android Engineer  at Twitch. Job Application for Android Engineer  at Twitch. Job Application for Android Software Engineer, Extensions at Twitch. Houzz - Junior Android Software Engineer. Houzz - Android Software Engineer. GoSpotCheck - Android Engineer. Square Android Engineer, Sq

--- a/android-engineer.html
+++ b/android-engineer.html
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://vokal.recruiterbox.com/jobs/fk0fdvq/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vokal.recruiterbox.com/jobs/fk0fdvq/'>
     Android Engineer  at Vokal
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/robinhood/jobs/1740109'>Job Application for Android Engineer (Intern/Co-op) at Robinhood</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robinhood/jobs/1740109'>Job Application for Android Engineer (Intern/Co-op) at Robinhood</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/klarna/52e9c256-3b14-4370-b082-d1cf62a31f4a'>Klarna - Senior/Lead Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/klarna/52e9c256-3b14-4370-b082-d1cf62a31f4a'>Klarna - Senior/Lead Android Engineer</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -217,7 +217,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://tymit.workable.com/j/8F1F826C11'>Tymit - Jobs: Android Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tymit.workable.com/j/8F1F826C11'>Tymit - Jobs: Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -233,7 +233,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
+<h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 28, 2019 ... Because Ultra/Mint Mobile is looking for our next extraordinary Senior Android 
 Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
@@ -348,7 +348,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -419,7 +419,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nniZpKwi&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nniZpKwi&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-06-23</p>
 <hr/>
@@ -427,7 +427,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
+<h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
@@ -435,7 +435,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690281358--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690281358--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
